<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="action_settings">Settings</string>
    <string name="buttons_title">My Nanodegree Apps!</string>
    <string name="spotify_btn_title">SPOTIFY STREAMER</string>
    <string name="scores_btn_title">SCORES APP</string>
    <string name="library_btn_title">LIBRARY APP</string>
    <string name="build_it_btn_title">BUILD IT BIGGER</string>
    <string name="xyz_btn_title">XYZ READER</string>
    <string name="capstone_btn_title">CAPSTONE: MY OWN APP</string>
</resources>
