<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/button_container"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/app_button_horizontal_padding"
    android:paddingRight="@dimen/app_button_horizontal_padding"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/buttons_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textViewTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/spotify_button"
            style="@style/AppButton"
            android:onClick="onSpotifyClicked"
            android:text="@string/spotify_btn_title" />

        <Button
            android:id="@+id/scores_app_button"
            style="@style/AppButton"
            android:onClick="onScoresClicked"
            android:text="@string/scores_btn_title" />

        <Button
            android:id="@+id/build_it_app_button"
            style="@style/AppButton"
            android:onClick="onBuildItClicked"
            android:text="@string/build_it_btn_title" />

        <Button
            android:id="@+id/xyz_app_button"
            style="@style/AppButton"
            android:onClick="onXYZClicked"
            android:text="@string/xyz_btn_title" />

        <Button
            android:id="@+id/capstone_app_button"
            style="@style/AppButton"
            android:onClick="onCapstoneClicked"
            android:text="@string/capstone_btn_title" />
    </LinearLayout>


</RelativeLayout>
